--- a/src/app/settings/privacy-filter/privacy-filter.component.html
+++ b/src/app/settings/privacy-filter/privacy-filter.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <!-- Enable Privacy Filter -->
-  <div class="switch-row bottom-separator">
+  <div class="switch-row highlighted bottom-separator">
     <div class="label">Enable Privacy Filter</div>
     <div class="switch">
       <label class="label-switch">
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Block Ads -->
-  <div class="switch-row bottom-separator">
+  <div class="switch-row highlighted bottom-separator">
     <div class="label">Block Ads</div>
     <div class="switch">
       <label class="label-switch">
@@ -26,7 +26,7 @@
   </div>
 
   <!-- Block Trackers -->
-  <div class="switch-row bottom-separator">
+  <div class="switch-row highlighted bottom-separator">
     <div class="label">Block Trackers</div>
     <div class="switch">
       <label class="label-switch">
@@ -37,7 +37,7 @@
   </div>
 
   <!-- Block Malware -->
-  <div class="switch-row bottom-separator">
+  <div class="switch-row highlighted bottom-separator">
     <div class="label">Block Malware</div>
     <div class="switch">
       <label class="label-switch">
