--- a/src/app/settings/user-agent/user-agent.component.html
+++ b/src/app/settings/user-agent/user-agent.component.html
@@ -4,22 +4,22 @@
   </div>
 
   <!-- Private User Agent -->
-  <div (click)="setUserAgent('PRIVATE')" [ngClass]="{'checked': selectedUserAgentType === 'PRIVATE'}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('PRIVATE')" [ngClass]="{'checked': selectedUserAgentType === 'PRIVATE'}" class="switch-row highlighted selectable bottom-separator">
     <div class="label">Private User Agent</div>
   </div>
 
   <!-- Default User Agent -->
-  <div (click)="setUserAgent('DEFAULT')" [ngClass]="{'checked': selectedUserAgentType === 'DEFAULT'}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('DEFAULT')" [ngClass]="{'checked': selectedUserAgentType === 'DEFAULT'}" class="switch-row highlighted selectable bottom-separator">
     <div class="label">Default User Agent</div>
   </div>
 
   <!-- iOS User Agent -->
-  <div (click)="setUserAgent('IOS')" [ngClass]="{'checked': selectedUserAgentType === 'IOS'}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('IOS')" [ngClass]="{'checked': selectedUserAgentType === 'IOS'}" class="switch-row highlighted selectable bottom-separator">
     <div class="label">iOS User Agent</div>
   </div>
 
   <!-- Android User Agent -->
-  <div (click)="setUserAgent('ANDROID')" [ngClass]="{'checked': selectedUserAgentType === 'ANDROID'}" class="switch-row selectable bottom-separator">
+  <div (click)="setUserAgent('ANDROID')" [ngClass]="{'checked': selectedUserAgentType === 'ANDROID'}" class="switch-row highlighted selectable bottom-separator">
     <div class="label">Android User Agent</div>
   </div>
 
