--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -11,7 +11,7 @@
   color: #fff;
 }
 
-.cypherpunk-on { background-image: linear-gradient(to bottom, #4c8ee1, #034698); }
+.cypherpunk-on { background: rgb(4, 1, 37); }
 
 .cypherpunk-off {
   background-image: none;
@@ -165,7 +165,7 @@
   .routing-dd {
     @include span-columns(12);
     @include transition(height 0.5s);
-    background-color: #0f3c75;
+    background-color: #483F8F;
     overflow: hidden;
     &.open { height: rem(125); }
     &.closed { height: 0; }
@@ -180,7 +180,7 @@
       .forward-icon { float: right; }
       &:first-child { margin-top: rem(5); }
       &:last-child { margin-bottom: rem(5); }
-      &:hover, &.checked:hover { background-color: lighten(#0f3c75, 10%); }
+      &:hover, &.checked:hover { background-color: darken(#483F8F, 5%); }
       &.checked {
         background: url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 50%;
       }
