--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,7 +34,7 @@ body {
 #sub-menu {
   width: 100%;
   height: 100%;
-  background-color: #0f3c75;
+  background-color: #291B7D;
 }
 
 /* Reuseable Components */
@@ -52,16 +52,19 @@ body {
   clear: both;
   height: rem(40);
   color: #fff;
+  &.highlighted {
+    background-color: #483F8F;
+  }
   &.clickable {
     cursor: pointer;
-    &:hover { background-color: lighten(#0f3c75, 10%); }
+    &:hover { background-color: darken(#483F8F, 5%); }
   }
   &.selectable {
     @include pad(0 0 0 rem(10));
     cursor: pointer;
-    &:hover, &.checked:hover { background-color: lighten(#0f3c75, 10%); }
+    &:hover, &.checked:hover { background-color: darken(#483F8F, 5%); }
     &.checked {
-      background: url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 50%;
+      background: #483F8F url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 50%;
     }
   }
   .label {
@@ -143,14 +146,15 @@ body {
   $switch-radius: $switch-height;
   $switch-background: rgba(255, 255, 255, 0.9);
   $switch-disabled-background: #cccccc;
-  $switch-shadow: inset 0px 1px 2px 1px rgba(0, 0, 0, 0.1);
-  $switch-active-color: #0088ff;
+  $switch-shadow: none; //inset 0px 1px 2px 1px rgba(0, 0, 0, 0.1);
+  $switch-active-color: #fff;
 
-  $knob-size: $switch-height - ($switch-padding * 2);
-  $knob-radius: $switch-height - ($switch-padding * 2);
+  $knob-size: $switch-height - ($switch-padding * 3);
+  $knob-radius: $switch-height - ($switch-padding * 0.2);
   $knob-width: $knob-size;
-  $knob-color: #fff;
-  $knob-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+  $knob-color: linear-gradient(135deg, #ccc 0%,#ccc 50%,#B7B7B7 51%,#B7B7B7 100%);
+  $knob-active-color: linear-gradient(135deg, #81D135 0%,#81D135 50%,#73BB2E 51%,#73BB2E 100%);
+  $knob-shadow: none; //0 1px 2px 0 rgba(0, 0, 0, 0.5);
 
   border-radius: $switch-radius;
   cursor: pointer;
@@ -188,7 +192,7 @@ body {
       }
 
       &::after {
-        @include position(absolute, 2px 0 0 2px);
+        @include position(absolute, rem(3) 0 0 rem(4));
         @include size($knob-size);
         background: $knob-color;
         border-radius: $knob-radius;
@@ -212,7 +216,9 @@ body {
 
         &::before { transform: scale(0); }
         &::after {
-          left: $switch-width - $knob-width - ($switch-padding);
+          background: $knob-active-color;
+          left: rem(22);
+          top: rem(3);
         }
       }
     }
@@ -272,7 +278,7 @@ a {
   .region {
     @include pad(0 rem(30));
     @include span-columns(12);
-    background-color: rgb(10,48,95);
+    background-color: $overlay--dark;
     height: rem(32);
     line-height: rem(32);
     font-size: rem(12);
@@ -312,7 +318,7 @@ a {
       opacity: 0.45;
     }
     &.disabled .flag, &.disabled .name, &.disabled .premium { opacity: 0.45; }
-    &:hover, &.checked:hover { background-color: lighten(#0f3c75, 10%); }
+    &:hover, &.checked:hover { background-color: $overlay--hover; }
     &.checked {
       background: url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 50%;
     }
