--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -145,7 +145,7 @@ body {
   $switch-height: 24px;
   $switch-radius: $switch-height;
   $switch-background: rgba(255, 255, 255, 0.9);
-  $switch-disabled-background: #cccccc;
+  $switch-disabled-background: #ddd;
   $switch-shadow: none; //inset 0px 1px 2px 1px rgba(0, 0, 0, 0.1);
   $switch-active-color: #fff;
 
