--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,10 +6,10 @@ $app-height: 600px;
 // Colors
 $gray-med:        #999;
 $gray-dark-trans: rgba(102, 102, 102, 0.85);
-$color-error:     #e02222;
-$overlay--hover:  rgba(#483F8F, 0.25);
-$overlay--dark:   #483F8F;
+$color-error:     #292844;
+$overlay--hover:  rgba(#29207B, 0.25);
+$overlay--dark:   #29207B;
 
 
 // Frames
-$border--separator: 1px solid rgba(255, 255, 255, 0.2);
+$border--separator: 1px solid #483c91;
