--- a/src/app/settings/settings-controller.component.html
+++ b/src/app/settings/settings-controller.component.html
@@ -1,19 +1,19 @@
-<div style="z-index: 2; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'static'" *ngIf="currentView === 'app-settings'">
+<div class="view-container parent" style="" [@slideIn]="'static'" *ngIf="currentView === 'app-settings'">
   <app-settings (changeView)="changeView($event)"></app-settings>
 </div>
 
-<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-user-agent'">
+<div class="view-container child" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-user-agent'">
   <app-user-agent (changeView)="changeView($event)"></app-user-agent>
 </div>
 
-<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="type" *ngIf="currentView === 'app-default-routing'">
+<div class="view-container child" [@slideIn]="type" *ngIf="currentView === 'app-default-routing'">
   <app-default-routing (changeView)="changeView($event)"></app-default-routing>
 </div>
 
-<div style="z-index: 4; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-specific-server'">
+<div class="view-container grandchild" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-specific-server'">
   <app-specific-server (changeView)="changeView($event)"></app-specific-server>
 </div>
 
-<div style="z-index: 3; width:100%; height: 100%; display: block; position:absolute;" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-privacy-filter'">
+<div class="view-container child" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-privacy-filter'">
   <app-privacy-filter (changeView)="changeView($event)"></app-privacy-filter>
 </div>
