Moving application of proxy to background script
* Removed force https, and webrtc leak protection from UI

* Unifying routing types between DEFAULT ROUTING TYPE and website
  specific overrides

* Upon url load figure out which proxy to apply.

* Background script now figures out which proxy to apply based on the
  default routing option and website specific overrides. See the
  background script console output.

* TODO: There is something breaking the pac script, proxy connection
  is failing

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -71,7 +71,7 @@
 
       <!-- Smart Routing Dropdown -->
       <div class="routing-dd" [ngClass]="{'open': showRoutingDropdown, 'closed': !showRoutingDropdown}">
-        <div class="row" (click)="selectSmartRoute('RECOMMENDED')" [ngClass]="{'checked': selectedSmartRouteOpt === 'RECOMMENDED' }">{{smartRouteOpts.recommended.title}}</div>
+        <div class="row" (click)="selectSmartRoute('SMART')" [ngClass]="{'checked': selectedSmartRouteOpt === 'SMART' }">{{ proxySettingsService.closestServerName }} (Recommended)</div>
         <div class="row" (click)="selectSmartRoute('CLOSEST')" [ngClass]="{'checked': selectedSmartRouteOpt === 'CLOSEST' }">{{ proxySettingsService.closestServerName }} (Closest)</div>
         <div class="row" (click)="selectSmartRoute('SELECTED')" [ngClass]="{'checked': selectedSmartRouteOpt === 'SELECTED' }" routerLink="/selected-server" routerLinkActive="active">
           {{ selectedSmartRouteOpt === 'SELECTED' && selectedSmartRouteServer ? 'Selected Server: ' + selectedSmartRouteServer.name : 'Selected Server'}}
