--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <!-- Force HTTPS -->
-  <div class="switch-row highlighted bottom-separator">
+<!--   <div class="switch-row highlighted bottom-separator">
     <div class="label">Force HTTPS</div>
     <div class="switch">
       <label class="label-switch">
@@ -21,10 +21,10 @@
         <div class="checkbox"></div>
       </label>
     </div>
-  </div>
+  </div> -->
 
   <!-- WebRTC Leak Protection -->
-  <div class="switch-row highlighted bottom-separator">
+<!--   <div class="switch-row highlighted bottom-separator">
     <div class="label">WebRTC Leak Protection</div>
     <div class="switch">
       <label class="label-switch">
@@ -33,7 +33,7 @@
       </label>
     </div>
   </div>
-
+ -->
   <!-- Privacy Filter Settings -->
   <div (click)="goToView('app-privacy-filter')" class="switch-row highlighted clickable bottom-separator">
     <div class="label half">Privacy Filter Settings</div>
