--- a/src/app/settings/default-routing/default-routing.component.html
+++ b/src/app/settings/default-routing/default-routing.component.html
@@ -10,13 +10,13 @@
   </div>
 
   <!-- Fastest Server -->
-  <div (click)="selectRoutingType('FASTEST')" [ngClass]="{'checked': defaultRoutingType === 'FASTEST'}" class="double-row bottom-separator">
+  <div (click)="selectRoutingType('CLOSEST')" [ngClass]="{'checked': defaultRoutingType === 'CLOSEST'}" class="double-row bottom-separator">
     <div class="label">Use the fastest server</div>
     <div class="desc">Use the server closest to me.</div>
   </div>
 
   <!-- Specific Country -->
-  <div (click)="goToView('app-specific-server')" [ngClass]="{'checked': defaultRoutingType === 'SPECIFIC'}" class="double-row bottom-separator" >
+  <div (click)="goToView('app-specific-server')" [ngClass]="{'checked': defaultRoutingType === 'SELECTED'}" class="double-row bottom-separator" >
     <div class="label half">Use specific server</div>
     <div class="action">
       {{defaultRoutingSelected}}
