--- a/src/app/settings/default-routing/specific-server/specific-server.component.html
+++ b/src/app/settings/default-routing/specific-server/specific-server.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="country-select">
-    <div *ngFor="let server of serverArr; let i = index; trackBy: trackByFn">
+    <div *ngFor="let server of serverArr; let i = index;">
 
       <div class="region" *ngIf="i === 0 || (!(i === 0) && serverArr[i-1].region !== server.region)">
         {{regions[server.region]}}
