--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -426,3 +426,27 @@ a {
     }
   }
 }
+
+.account {
+  color: #fff;
+  overflow: auto;
+
+  .account-info {
+    background-color: #1A1246;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px 0;
+    margin: 0 0 20px;
+    .type { text-transform: capitalize; }
+  }
+
+  section.account-menu {
+    margin: 10px 0 20px;
+    .header {
+      height: 2.5rem;
+      line-height: 2.5rem;
+      font-weight: bold;
+      padding: 0 0 0 1.25rem;
+    }
+  }
+}
