--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -447,6 +447,7 @@ a {
     text-align: center;
     padding: 20px 0;
     margin: 0 0 20px;
+    min-height: 94px;
     .type {
       margin: 10px 0 0;
       text-transform: capitalize;
