Fix ip cache. Disable selection for none http or https protocols
* IP was being cached from the previous visited site. Clearing
  cache on new url load to resolve this issue. IP should no longer
  be leaked or cached when visiting a new or transitioning between
  websites.

* When in views such as "chrome://" or "newtab" the default selected
  proxy is "No Proxy" and the selections are disabled. TODO: add
  default icons for these views

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -68,7 +68,7 @@
       </div>
 
       <!-- Smart Routing Dropdown -->
-      <div class="routing-dd open">
+      <div class="routing-dd" [ngClass]="{'disabled': !validProtocol }">
         <div class="row" (click)="selectRouteType('SMART')" [ngClass]="{'checked': selectedRouteOpt === 'SMART' }">{{ smartServerName }} (Smart Routing)</div>
         <div class="row" (click)="selectRouteType('FASTEST')" [ngClass]="{'checked': selectedRouteOpt === 'FASTEST' }">{{ proxySettingsService.fastestServerName }} (Fastest)</div>
         <div class="row" (click)="selectRouteType('SELECTED')" [ngClass]="{'checked': selectedRouteOpt === 'SELECTED' }" routerLink="/selected-server" routerLinkActive="active">
