--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -24,7 +24,7 @@
   </div> -->
 
   <!-- WebRTC Leak Protection -->
-<!--   <div class="switch-row highlighted bottom-separator">
+  <div class="switch-row highlighted bottom-separator">
     <div class="label">WebRTC Leak Protection</div>
     <div class="switch">
       <label class="label-switch">
@@ -33,7 +33,7 @@
       </label>
     </div>
   </div>
- -->
+
   <!-- Privacy Filter Settings -->
 <!--   <div (click)="goToView('app-privacy-filter')" class="switch-row highlighted clickable bottom-separator">
     <div class="label half">Privacy Filter Settings</div>
