Disabling selection of unavailable servers. WebRTC Leak. Subdomain
* Unavailable servers should no longer be selectable.

* Free users should no longer be able to select premium servers

* WebRTC leak prevention is now a selectable option with 4 choices.
  Default is to disable web rtc

* Added rules to PAC Script which checks for subdomain requests

--- a/src/app/settings/settings-controller.component.html
+++ b/src/app/settings/settings-controller.component.html
@@ -6,6 +6,10 @@
   <app-user-agent (changeView)="changeView($event)"></app-user-agent>
 </div>
 
+<div class="view-container child" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-web-rtc'">
+  <app-web-rtc (changeView)="changeView($event)"></app-web-rtc>
+</div>
+
 <div class="view-container child" [@slideIn]="type" *ngIf="currentView === 'app-default-routing'">
   <app-default-routing (changeView)="changeView($event)"></app-default-routing>
 </div>
