--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -24,7 +24,14 @@
   </div> -->
 
   <!-- WebRTC Leak Protection -->
-  <div class="switch-row highlighted bottom-separator">
+  <div (click)="goToView('app-web-rtc')" class="switch-row highlighted clickable bottom-separator">
+    <div class="label half">WebRTC Leak Prevention</div>
+    <div class="switch half">
+      {{webRTCType}}
+      <span class="forward-icon">&#x3009;</span>
+    </div>
+  </div>
+<!--   <div class="switch-row highlighted bottom-separator">
     <div class="label">WebRTC Leak Protection</div>
     <div class="switch">
       <label class="label-switch">
@@ -32,7 +39,7 @@
         <div class="checkbox"></div>
       </label>
     </div>
-  </div>
+  </div> -->
 
   <!-- Privacy Filter Settings -->
 <!--   <div (click)="goToView('app-privacy-filter')" class="switch-row highlighted clickable bottom-separator">
