--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,6 +48,57 @@ body {
 }
 
 
+.double-row {
+  @include row;
+  clear: both;
+  height: rem(75);
+  color: #fff;
+  background-color: #1A1246;
+  cursor: pointer;
+
+  &:hover, &.checked:hover { background-color: darken(#1A1246, 5%); }
+  &.checked {
+    background: #1A1246 url('/assets/checkmarks/icon-circle-check.png') no-repeat rem(10) 32%;
+  }
+  .label {
+    @include span-columns(12);
+    @include pad(0 0 0 rem(32));
+    height: rem(40);
+    line-height: rem(52);
+    text-align: left;
+    div { @include display(inline-block); }
+    &.half { @include span-columns(6); }
+  }
+  .action {
+    @include span-columns(6);
+    @include omega;
+    @include pad(0 rem(20) 0 0);
+    height: rem(40);
+    line-height: rem(52);
+    text-align: right;
+  }
+  .desc {
+    @include span-columns(12);
+    @include pad(0 0 0 rem(32));
+    color: rgba(255, 255, 255, 0.6);
+    text-align: left;
+    div { @include display(inline-block); }
+  }
+  &.extended-desc {
+    &.checked {
+      background: #1A1246 url('/assets/checkmarks/icon-circle-check.png') no-repeat rem(10) rem(19);
+    }
+    .desc {
+      @include pad(0 rem(32) 0 rem(32));
+      font-size: 0.75rem;
+    }
+    @include pad(0 0 1rem 0);
+    height: initial;
+  }
+}
+
+
+
 .switch-row {
   @include row;
   clear: both;
